--- a/BlobStorageUI.Server/BlobStorageUI.Server.csproj
+++ b/BlobStorageUI.Server/BlobStorageUI.Server.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
